--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "skipLibCheck": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "allowUnreachableCode": false
+    "allowUnreachableCode": false,
+    "preserveConstEnums": true
     //"strictNullChecks": false
   }
 }
